# I-Mart

./: .env.example  .gitignore  docker-compose.yml
agent/: .env.example  .gitignore  README.md  dockerfile  pyproject.toml
agent/src/: bot.py  config.py  graph.py  main.py  pipeline.py  processors.py  prompts.py  server.py  tools.py  transport.py
client/: package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/api/: auth.ts
client/app/auth/callback/: page.tsx
client/app/auth/login/: page.tsx
client/app/auth/signup/: page.tsx
client/app/cart/: page.tsx
client/app/components/common/: agent-widget-wrapper.tsx  agent-widget.tsx  navbar.tsx
client/app/hooks/: useVoiceAgentWebSocket.ts
client/app/products/: page.tsx
client/app/providers/: auth-provider.tsx
client/app/stores/: auth-store.ts
server/: .env.example  alembic.ini  dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 339837b321fe_user_table_added.py  76bcf5e87ceb_added_category_order_address_product_.py
server/app/: main.py
server/app/api/: router.py
server/app/api/routes/: auth.py  products.py
server/app/core/: config.py  lifespan.py  logging.py
server/app/db/: __init__.py  session.py
server/app/db/models/: __init__.py  address.py  base.py  cart.py  cart_item.py  category.py  order.py  order_item.py  product.py  users.py
server/app/schemas/: auth.py  product.py
server/app/services/: auth.py
server/app/utils/: cookies.py  tokens.py
