[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
